--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/camwi_000/Development/Jars/1.7.9-Bukkit.jar"/>
+	<classpathentry kind="lib" path="D:/Servers/Dev Stuff/Jars/bukkit-1.7.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
